# release-test

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: lib.rs  main.rs  result.rs  version.rs
src/opendrive/: mod.rs  models.rs  utils.rs
src/opendrive/checks/: basic.rs  geometry.rs  mod.rs  performance.rs  schema.rs  semantic.rs  smoothness.rs
src/report/: mod.rs  text.rs  xqar.rs
tests/: test_basic_checks.rs  test_geometry_checks.rs  test_performance_checks.rs  test_schema_checks.rs  test_semantic_checks.rs  test_smoothness_checks.rs  test_utils.rs  test_version.rs
tests/common/: mod.rs
tools/: diff_all.py  diff_test.py  run_python_ref.py
